--- a/productpage.html
+++ b/productpage.html
@@ -37,259 +37,228 @@
       <a href="#" class="cart-to-checkout"><button>Proceed to checkout</button></a>
     </div>
   </header>
-  <main>
-    <!-- hamburger menu start ↓ -->
-    <section class="sec-hamburger">
-      <div class="head-hamburger">
-        <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
-      </div>
 
-      <div class="body-hamburger">
-        <div class="body-hamburger-text">
-          <a href="home.html">
-            <h1>HOME</h1>
+  <!-- hamburger menu start ↓ -->
+  <section class="sec-hamburger">
+    <div class="head-hamburger">
+      <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
+    </div>
+
+    <div class="body-hamburger">
+      <div class="body-hamburger-text">
+        <a href="home.html">
+          <h1>HOME</h1>
+        </a>
+
+        <h1 class="hamcat-shop">SHOP</h1>
+        <div class="pages-shop pages hidden">
+          <a href="productlist.html">
+            <h2>KITS</h2>
           </a>
+          <a href="productlist.html">
+            <h2>REFILLS</h2>
+          </a>
+          <a href="productlist.html">
+            <h2>CASTING</h2>
+          </a>
+        </div>
+        <div class="big-pages big-pages-shop hidden">
+          <div class="big-pages-header">
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU studio logo" />
+          </div>
+          <div class="big-pages-body-flex">
+            <div class="big-pages-body">
+              <a href="productlist.html">
+                <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>KITS</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="productlist.html">
+                <img class="ham-cat-image" src="assets/refills-blur.png" alt="ring made from blue wax" />
+                <div class="big-link-flex">
+                  <h2>REFILLS</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="productlist.html">
+                <img class="ham-cat-image" src="assets/casting-blur.png" alt="hands with several unique silver rings" />
+                <div class="big-link-flex">
+                  <h2>CASTING</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="big-pages-footer">
+            <p>hello@byustudio.dk | +45 12 34 56 78</p>
+          </div>
+        </div>
 
-          <h1 class="hamcat-shop">SHOP</h1>
-          <div class="pages-shop pages hidden">
-            <a href="productlist.html">
-              <h2>KITS</h2>
-            </a>
-            <a href="productlist.html">
-              <h2>REFILLS</h2>
-            </a>
-            <a href="productlist.html">
-              <h2>CASTING</h2>
-            </a>
+        <h1 class="hamcat-about">ABOUT BYÙ STUDIO</h1>
+        <div class="pages-about pages hidden">
+          <a href="about.html">
+            <h2>ABOUT US</h2>
+          </a>
+          <a href="manifesto.html">
+            <h2>MANIFESTO</h2>
+          </a>
+          <a href="sustainanability.html">
+            <h2>SUSTAINABILITY</h2>
+          </a>
+          <a href="contact.html">
+            <h2>CONTACT US</h2>
+          </a>
+        </div>
+        <div class="big-pages big-pages-about hidden">
+          <div class="big-pages-header">
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
           </div>
-          <div class="big-pages big-pages-shop hidden">
-            <div class="big-pages-header">
-              <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU studio logo" />
-            </div>
-            <div class="big-pages-body-flex">
-              <div class="big-pages-body">
-                <a href="productlist.html">
-                  <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
-                  <div class="big-link-flex">
-                    <h2>KITS</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-                <a href="productlist.html">
-                  <img class="ham-cat-image" src="assets/refills-blur.png" alt="ring made from blue wax" />
-                  <div class="big-link-flex">
-                    <h2>REFILLS</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-                <a href="productlist.html">
-                  <img class="ham-cat-image" src="assets/casting-blur.png"
-                    alt="hands with several unique silver rings" />
-                  <div class="big-link-flex">
-                    <h2>CASTING</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="big-pages-footer">
-              <p>hello@byustudio.dk | +45 12 34 56 78</p>
+          <div class="big-pages-body-flex">
+            <div class="big-pages-body">
+              <a href="about.html">
+                <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>ABOUT US</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="manifesto.html">
+                <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>MANIFESTO</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="sustainanability.html">
+                <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>SUSTAINABILITY</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="contact.html">
+                <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>CONTACT US</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
             </div>
           </div>
+          <div class="big-pages-footer">
+            <p>hello@byustudio.dk | +45 12 34 56 78</p>
+          </div>
+        </div>
 
-          <h1 class="hamcat-about">ABOUT BYÙ STUDIO</h1>
-          <div class="pages-about pages hidden">
-            <a href="about.html">
-              <h2>ABOUT US</h2>
-            </a>
-            <a href="manifesto.html">
-              <h2>MANIFESTO</h2>
-            </a>
-            <a href="sustainanability.html">
-              <h2>SUSTAINABILITY</h2>
-            </a>
-            <a href="contact.html">
-              <h2>CONTACT US</h2>
-            </a>
+        <h1 class="hamcat-start">GET STARTED</h1>
+        <div class="pages-getstarted pages hidden">
+          <a href="faq.html">
+            <h2>FAQ</h2>
+          </a>
+          <a href="inspiration.html">
+            <h2>INSPIRATION</h2>
+          </a>
+          <a href="tutorial.html">
+            <h2>TUTORIALS</h2>
+          </a>
+        </div>
+        <div class="big-pages big-pages-getstarted hidden">
+          <div class="big-pages-header">
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
           </div>
-          <div class="big-pages big-pages-about hidden">
-            <div class="big-pages-header">
-              <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
-            </div>
-            <div class="big-pages-body-flex">
-              <div class="big-pages-body">
-                <a href="about.html">
-                  <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
-                  <div class="big-link-flex">
-                    <h2>ABOUT US</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-                <a href="manifesto.html">
-                  <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
-                  <div class="big-link-flex">
-                    <h2>MANIFESTO</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-                <a href="sustainanability.html">
-                  <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
-                  <div class="big-link-flex">
-                    <h2>SUSTAINABILITY</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-                <a href="contact.html">
-                  <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
-                  <div class="big-link-flex">
-                    <h2>CONTACT US</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="big-pages-footer">
-              <p>hello@byustudio.dk | +45 12 34 56 78</p>
+          <div class="big-pages-body-flex">
+            <div class="big-pages-body">
+              <a href="faq.html">
+                <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>FAQ</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="inspiration.html">
+                <img class="ham-cat-image" src="assets/inspiration-blur.png" alt="ring made from blue wax" />
+                <div class="big-link-flex">
+                  <h2>INSPIRATION</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="tutorial.html">
+                <img class="ham-cat-image" src="assets/tutorials-blur.png"
+                  alt="hands with several unique silver rings" />
+                <div class="big-link-flex">
+                  <h2>Tutorials</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
             </div>
           </div>
-
-          <h1 class="hamcat-start">GET STARTED</h1>
-          <div class="pages-getstarted pages hidden">
-            <a href="faq.html">
-              <h2>FAQ</h2>
-            </a>
-            <a href="inspiration.html">
-              <h2>INSPIRATION</h2>
-            </a>
-            <a href="tutorial.html">
-              <h2>TUTORIALS</h2>
-            </a>
-          </div>
-          <div class="big-pages big-pages-getstarted hidden">
-            <div class="big-pages-header">
-              <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
-            </div>
-            <div class="big-pages-body-flex">
-              <div class="big-pages-body">
-                <a href="faq.html">
-                  <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
-                  <div class="big-link-flex">
-                    <h2>FAQ</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-                <a href="inspiration.html">
-                  <img class="ham-cat-image" src="assets/inspiration-blur.png" alt="ring made from blue wax" />
-                  <div class="big-link-flex">
-                    <h2>INSPIRATION</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-                <a href="tutorial.html">
-                  <img class="ham-cat-image" src="assets/tutorials-blur.png"
-                    alt="hands with several unique silver rings" />
-                  <div class="big-link-flex">
-                    <h2>Tutorials</h2>
-                    <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="big-pages-footer">
-              <p>hello@byustudio.dk | +45 12 34 56 78</p>
-            </div>
+          <div class="big-pages-footer">
+            <p>hello@byustudio.dk | +45 12 34 56 78</p>
           </div>
         </div>
       </div>
-      <div class="footer-hamburger someiconflex">
-        <a href="https://www.instagram.com/" target="_blank"><img class="somelogo" src="assets/instagram-white.png"
-            alt="Instagram logo" /></a>
-        <a href="https://www.facebook.com/" target="_blank"><img class="somelogo" src="assets/facebook-white.png"
-            alt="Facebook logo" /></a>
-        <a href="https://www.pinterest.com/" target="_blank"><img class="somelogo" src="assets/pinterest-white.png"
-            alt="Pinterest logo" /></a>
-      </div>
-    </section>
-    <!-- the end of the menu ↑ -->
-
+    </div>
+    <div class="footer-hamburger someiconflex">
+      <a href="https://www.instagram.com/" target="_blank"><img class="somelogo" src="assets/instagram-white.png"
+          alt="Instagram logo" /></a>
+      <a href="https://www.facebook.com/" target="_blank"><img class="somelogo" src="assets/facebook-white.png"
+          alt="Facebook logo" /></a>
+      <a href="https://www.pinterest.com/" target="_blank"><img class="somelogo" src="assets/pinterest-white.png"
+          alt="Pinterest logo" /></a>
+    </div>
+  </section>
+  <!-- the end of the menu ↑ -->
+  <main>
+    <!-- product info ↓ -->
     <img src="assets/family-kit-box.png" alt="" class="product-image">
-    <div class="breadcrumbs flex-container">
-      <a href="">
-        <p class="category-breadcrumb">else</p>
-      </a>
-      <p>&nbsp;/&nbsp;</p>
-      <p class="product-breadcrumb">Family kit</p>
-    </div>
-    <div class="top-details flex-container">
-      <h1>Kit title</h1>
-      <h2>DKK <span>100</span></h2>
-    </div>
-    <h2>What is in the kit</h2>
-    <p class="kit-content">Item 1, item 2, item 3</p>
-    <form name="ordering-form" class="ordering-form">
-      <div class="title-form">
-        <h2>Extra wax</h2>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
+    <div class="col-2">
+      <div class="breadcrumbs flex-container">
+        <a href="">
+          <p class="category-breadcrumb">else</p>
+        </a>
+        <p>&nbsp;/&nbsp;</p>
+        <p class="product-breadcrumb">Family kit</p>
       </div>
-      <!-- wax section -->
-      <section class="wax-container-to-append"></section>
-      <!-- <div class="label-group">
-        <label for="blue-wax" class="wax-selection">
-          <input type="checkbox" id="blue-wax" name="blue-wax" value="Blue wax">
-          Hard blue wax, 10g<span class="checkmark">
-        </label></span>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
-        <p>DKK <span>515</span></p>
+      <div class="top-details flex-container">
+        <h1>Kit title</h1>
+        <h2>DKK <span>100</span></h2>
       </div>
-      <div class="label-group"><label for="red-wax" class="wax-selection">
-          <input type="checkbox" id="red-wax" name="red-wax" value="Red wax">
-          Soft red wax, 10g<span class="checkmark">
-        </label></span>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
-        <p>DKK <span>515</span></p>
-      </div>
-      <div class="label-group"><label for="pink-wax" class="wax-selection"><input type="checkbox" id="pink-wax"
-            name="pink-wax" value="Pink wax">Very soft pink wax,
-          10g<span class="checkmark">
-        </label></span>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
-        <p>DKK <span>515</span></p>
-      </div> -->
+      <h2 class="col-2">What is in the kit</h2>
+      <p class="kit-content">Item 1, item 2, item 3</p>
+      <form name="ordering-form" class="ordering-form">
+        <div class="title-form">
+          <h2>Extra wax</h2>
+          <p class="explanation-box">&nbsp;?&nbsp;</p>
+        </div>
+        <!-- the end of the main product info ↑ -->
 
-      <!-- prepay selection -->
+        <!-- wax selection -->
+        <section class="wax-container-to-append"></section>
+        <!-- static version would go here -->
 
-      <div class="title-form">
-        <h2>Prepay for casting</h2>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
-      </div>
-      <section class="casting-container-to-append"></section>
-      <!-- <div class="label-group">
-        <label for="silver" class="wax-selection"><input type="radio" id="silver" name="casting" value="silver">
-          Yes, cast my piece in SILVER<span class="checkmark radio-btn"></span></label></span>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
-        <p>DKK <span>515</span></p>
-      </div>
-      <div class="label-group">
-        <label for="gold" class="wax-selection"><input type="radio" id="gold" name="casting" value="gold">
-          Yes, cast my piece in GOLD<span class="checkmark radio-btn"></span></label></span>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
-        <p>DKK <span>515</span></p>
-      </div>
-      <div class="label-group">
-        <label for="nothing" class="wax-selection"><input type="radio" id="nothing" name="casting" value="nothing">
-          I will order casting later<span class="checkmark radio-btn"></span></label></span>
-        <p class="explanation-box">&nbsp;?&nbsp;</p>
-        <p>DKK <span>515</span></p>
-      </div>
-      <div class="total-add-container">
-        <div class="total-container flex-container">
-          <h2>Your total</h2>
-          <p>DKK <span>300</span></p>
-        </div> -->
-      <div class="align-button">
-        <button class="add-to-cart">Add to cart</button></div>
-      </div>
-    </form>
+        <!-- prepay selection -->
+        <div class="title-form">
+          <h2>Prepay for casting</h2>
+          <p class="explanation-box">&nbsp;?&nbsp;</p>
+        </div>
+        <section class="casting-container-to-append"></section>
+        <!-- static version would go here -->
+
+        <div class="total-add-container">
+          <div class="total-container flex-container">
+            <h2>Your total:</h2>
+            <p>DKK <span>300</span></p>
+          </div>
+          <div class="align-button">
+            <button class="add-to-cart">Add to cart</button></div>
+        </div>
+      </form>
+    </div>
+
+
+    <!--additional info ↓  -->
     <div class="additional-info">
       <h3>Description</h3>
       <p class="kit-description"></p>
