--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/contact.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/menu.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <title>Get in touch</title>
   </head>
   <body>
     <header>
@@ -249,6 +251,117 @@
         /></a>
       </div>
     </section>
+
+    <div id="thickLines"><img src="css/thick-lines-bg.svg" alt="" /></div>
+
+    <section id="title">
+      <h1 id="decorative">Get in touch!</h1>
+      <p>
+        I’m always happy to help with any questions or problems you might have
+        regarding BYÚ studio. You can leave me a message here, or reach out to
+        me on Instagram and I’ll get back to you as soon as possible!
+      </p>
+    </section>
+    <main>
+      <section class="contact_info">
+        <h3>Contact information</h3>
+        <p>Email: hello@byu.dk</p>
+        <p>Phone number: +45 12 34 56 78</p>
+        <p>Instagram: @byustudio</p>
+        <p>Facebook: /byu.studio</p>
+        <p>Address: København, Danmark</p>
+      </section>
+
+      <section class="contact_form">
+        <h3>Contact form</h3>
+        <section class="form-input">
+          <div class="two-box-flex">
+            <input
+              type="text"
+              id="firstname"
+              name="firstname"
+              placeholder="Name"
+            />
+            <input
+              type="text"
+              id="surname"
+              name="surname"
+              placeholder="Surname"
+            />
+          </div>
+          <input
+            type="tel"
+            name="phonenumber"
+            id="phonenumber"
+            placeholder="Telephone number"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+            />
+
+            <input
+            type="text"
+            name="subject"
+            id="subject"
+            placeholder="Subject"
+            />
+
+            <input 
+            type="text"
+            name="message"
+            id= "message"
+            />
+            
+
+      </section>
+      <button>Send Message</button>
+    </main>
+
+    <footer>
+      <img src="assets/Black_logo 1.svg" alt="logo-icon" />
+      <p id="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus viverra
+        consectetur adipiscing elit. Rhoncus viverra
+      </p>
+      <p id="contact">+45 12 34 56 78 | hello@byustudio.dk</p>
+      <div id="some">
+        <img src="assets/ig_logo.svg" alt="" /><img
+          src="assets/facebook_logo.svg"
+          alt=""
+        /><img src="assets/Vector.svg" alt="" />
+      </div>
+      <div id="footerNav">
+        <ul>
+          <li><h5>Shop</h5></li>
+          <li><a href="">Kits</a></li>
+          <li><a href="">Add-ons</a></li>
+          <li><a href="">Casting</a></li>
+        </ul>
+        <ul>
+          <li><h5>We Are</h5></li>
+          <li><a href="">About BYU</a></li>
+          <li><a href="">Manifestop</a></li>
+          <li><a href="">Sustainability</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+        <ul>
+          <li><h5>Get Started</h5></li>
+          <li><a href="">Inspiration</a></li>
+          <li><a href="">Tutorials</a></li>
+          <li><a href="">FAQ's</a></li>
+        </ul>
+      </div>
+      <div id="legal">
+        <a href="">Privacy policy | </a>
+        <a href="">FAQ's | </a>
+        <a href="">Customer service | </a>
+        <a href="">Shipping | </a>
+        <a href="">Terms and conditions</a>
+      </div>
+    </footer>
   </body>
   <script src="js/hamburger.js"></script>
 </html>
