first and the last

--- a/tutorial.html
+++ b/tutorial.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/menu.css" />
-    <title>Sustainability</title>
+    <title>Tutorials</title>
   </head>
 
   <body>
@@ -257,7 +257,67 @@
     <section id="title">
       <h1 id="decorative">Tutorials</h1>
     </section>
+    <section id="steps">
+      <div class="step">
+        <img src="assets/step-one.svg" alt="" />
+        <h5>Step one</h5>
+      </div>
+      <img src="assets/drawn-arrow.svg" alt="" />
+      <div class="step">
+        <img src="assets/step-one.svg" alt="" />
+        <h5>Step one</h5>
+      </div>
+      <img src="assets/drawn-arrow.svg" alt="" />
+      <div class="step">
+        <img src="assets/step-one.svg" alt="" />
+        <h5>Step one</h5>
+      </div>
+      <img src="assets/drawn-arrow.svg" alt="" />
+      <div class="step">
+        <img src="assets/step-one.svg" alt="" />
+        <h5>Step one</h5>
+      </div>
+      <img src="assets/drawn-arrow.svg" alt="" />
+      <div class="step">
+        <img src="assets/step-one.svg" alt="" />
+        <h5>Step one</h5>
+      </div>
+      <img src="assets/drawn-arrow.svg" alt="" />
+      <div class="step">
+        <img src="assets/step-one.svg" alt="" />
+        <h5>Step one</h5>
+      </div>
+    </section>
 
+    <section id="tutorials">
+      <article class="oneTutorial leftAli">
+        <div class="tutContent">
+          <div class="tutHeading">
+            <img src="assets/beige-number.svg" alt="" />
+            <h4>Step numero uno</h4>
+          </div>
+          <p class="tutText">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et
+            parturient magna nunc, lectus risus ultricies pellentesque.
+          </p>
+        </div>
+        <img src="assets/video-placeholder.jpg" alt="video-placeholder" />
+      </article>
+
+      <article class="oneTutorial rightAli">
+        <div class="tutContent">
+          <div class="tutHeading">
+            <img src="assets/beige-number.svg" alt="" />
+            <h4>Step numero uno</h4>
+          </div>
+          <p class="tutText">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et
+            parturient magna nunc, lectus risus ultricies pellentesque.
+          </p>
+        </div>
+        <img src="assets/video-placeholder.jpg" alt="video-placeholder" />
+      </article>
+    </section>
     <footer>
       <img src="assets/Black_logo 1.svg" alt="logo-icon" />
       <p id="description">
