changed file name and replaced link

--- a/checkout-info.html
+++ b/checkout-info.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-        <a href="home.html"
+        <a href="index.html"
           ><img src="assets/Black_logo 1.svg" alt="logo-icon"
         /></a>
         <img class="currenttabcheckout" src="assets/cart.svg" alt="cart-icon" />
@@ -31,7 +31,7 @@
 
       <div class="body-hamburger">
         <div class="body-hamburger-text">
-          <a href="home.html"><h1>HOME</h1></a>
+          <a href="index.html"><h1>HOME</h1></a>
 
           <h1 class="hamcat-shop">SHOP</h1>
           <div class="pages-shop pages hidden">
@@ -393,7 +393,7 @@
         </section>
         <div class="buttonflex">
           <button type="submit">Continue to Payment</button>
-          <a href="home.html"> Return to frontpage</a>
+          <a href="index.html"> Return to frontpage</a>
         </div>
       </form>
       <section class="ordersummarydesktop">
