--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-        <a href="home.html"
+        <a href="index.html"
           ><img src="assets/Black_logo 1.svg" alt="logo-icon"
         /></a>
         <img class="currenttabcheckout" src="assets/cart.svg" alt="cart-icon" />
