--- a/productpage.html
+++ b/productpage.html
@@ -46,7 +46,7 @@
 
     <div class="body-hamburger">
       <div class="body-hamburger-text">
-        <a href="home.html">
+        <a href="index.html">
           <h1>HOME</h1>
         </a>
 
