--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
       <div class="body-hamburger">
         <div class="body-hamburger-text">
-          <a href="home.html"><h1>HOME</h1></a>
+          <a href="index.html"><h1>HOME</h1></a>
 
           <h1 class="hamcat-shop">SHOP</h1>
           <div class="pages-shop pages hidden">
