--- a/sustainanability.html
+++ b/sustainanability.html
@@ -16,7 +16,9 @@
     <header>
       <nav>
         <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-        <a href=""><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
+        <a href="index.html"
+          ><img src="assets/Black_logo 1.svg" alt="logo-icon"
+        /></a>
         <img src="assets/cart.svg" alt="cart-icon" />
       </nav>
     </header>
