changed spans to divs and added z-index to burger

--- a/checkout-info.html
+++ b/checkout-info.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/checkout.css" />
-    <title>Document</title>
+    <title>Checkout | part 1 of 3t</title>
   </head>
   <body>
     <header>
@@ -258,7 +258,7 @@
           <p><span class="summarytoggletext">See</span> order summary</p>
           <img src="assets/openfat.png" alt="arrow" class="sumarrow" />
         </div>
-        <span class="summaryphone hidden">
+        <div class="summaryphone hidden">
           <div class="templateparent-mobile">
             <template class="template-mobile">
               <div class="cartitem">
@@ -285,7 +285,7 @@
               <p class="calctotalprice">DKK 123.00</p>
             </div>
           </div>
-        </span>
+        </div>
       </div>
     </section>
     <main>
