--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/checkout.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/nav.css" />
-    <title>Document</title>
+    <title>Checkout | part 2 of 3</title>
   </head>
 
   <body>
@@ -300,7 +300,7 @@
           <p><span class="summarytoggletext">See</span> order summary</p>
           <img src="assets/openfat.png" alt="arrow" class="sumarrow" />
         </div>
-        <span class="summaryphone hidden">
+        <div class="summaryphone hidden">
           <div class="templateparent-mobile">
             <template class="template-mobile">
               <div class="cartitem">
@@ -336,7 +336,7 @@
             </div>
             <div class="divider"></div>
           </div>
-        </span>
+        </div>
       </div>
     </section>
     <main>
