--- a/checkout-reciept.html
+++ b/checkout-reciept.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/checkout.css" />
-    <title>Document</title>
+    <title>Checkout | part 3 of 3</title>
   </head>
   <body>
     <header>
