thick lines corrected

--- a/sustainanability.html
+++ b/sustainanability.html
@@ -252,7 +252,7 @@
         /></a>
       </div>
     </section>
-    <div id="thickLines"><img src="css/thick-lines-bg.svg" alt="" /></div>
+    <div id="thickLines"></div>
 
     <section id="title">
       <h1 id="decorative">Sustainability</h1>
