changed bea's photo

--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@
     </section>
     <section id="title">
       <h1 id="decorative">Hi! My name is Bea</h1>
-      <img src="assets/about-image.jpg" alt="bea-about-image" />
+      <img src="assets/bea-about.jpg" alt="bea-about-image" />
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et parturient
         magna nunc, lectus risus ultricies pellentesque. Semper lobortis
