--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </h1>
         <img class="heroImg" id="heroDesk" src="assets/hero_img.jpg" alt="hero-img" />
         <img class="heroImg" id="heroMob" src="assets/hero-mobile.jpg" alt="hero-img" />
-        <img  src="assets/pattern-homepage.svg" id="background" alt="">  
-        <img id="bgMob" src="assets/bg-patternm.svg"  id="background-mobile" alt="">  
+        <div id="background" alt=""></div>
+        <div id="bgMob"  id="background-mobile" alt=""></div>
 </section>
       <section id="video">
         <video src="" controls poster="assets/hero_img.jpg"></video>
