backgrounds for text areas

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </div>
       </section>
       <section id="kits">
-        <div id="kitsText">
-          <h2>Go explore our kits</h2>
+        <div id="kitsText" class="textBg">
+          <h2>Explore our kits</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel vitae convallis ac nisi</p>
           <button>Tell me more</button>
       </div>
@@ -74,7 +74,7 @@
       <img id="ssmallerImg" src="assets/sus-lp-small.jpg" alt="">
       <img id="sbiggerImg" src="assets/sus-lp-big.jpg" alt="">
       <div id="sustainText">
-        <h2>We do care about nature</h2>
+        <h2>We care about nature</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel vitae convallis ac nisi</p>
         <button>Tell me more</button>
     </div>
