--- a/contact.html
+++ b/contact.html
@@ -273,7 +273,7 @@
       </section>
 
       <section class="contact_form">
-        <h3>Contact form</h3>
+        <h3>Send a message</h3>
         <section class="form-input">
           <div class="two-box-flex">
             <input
